--- a/jumping numbers non reduced.ipynb
+++ b/jumping numbers non reduced.ipynb
@@ -336,7 +336,9 @@
     "         \": z_\" + str(number_functions - number_components) + \", z_\" + str(number_functions - 1) + \\\n",
     "         \". Also, let z_0, ..., z_\" + str(number_functions_monomial) + \\\n",
     "          \" be the curves needed to complete the dual graph. \" + \\\n",
-    "          \"Introduce the orders of vanishing and the log-discrepancy separated by single spaces.\" + \\\n",
+    "          \"For each divisor: \" + \\\n",
+    "          \"Introduce the orders of vanishing of the z_i separated by single spaces and press enter, \" + \\\n",
+    "          \"then introduce the log-discrepancy and press enter again.\" + \\\n",
     "          \" \\nThe curve is represented by z_\" + str(number_functions) + \\\n",
     "          \".\\nThe divisors vary from E_1 to E_\" + str(number_divisors))\n",
     "\n",
